--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -247,3 +247,31 @@ margin-top:100px;
         }
         
 }
+
+
+.generation__item.main_item{
+    background:white;
+    margin:32px 32px 0;
+    width:calc(33.333% - 64px);
+    flex: 0 0 calc(33.333% - 64px);
+    padding:20px;
+    border-radius:20px;
+    display:flex;
+    align-items:center;
+    -webkit-box-shadow: 0px 5px 7px 0px rgba(107,107,107,0.5); 
+    box-shadow: 0px 5px 7px 0px rgba(107,107,107,0.5);
+    }
+    
+    .generation__item.main_item div{
+    padding:5px 5px 5px 10px;
+    }
+    
+    .generation__item.main_item div.main_icon{
+    padding:5px 10px 5px 2px;
+    }
+    
+    .generation__item.main_item div.main_text{
+    flex:2 1 auto;
+    font-weight:500;
+    padding:5px 0px 5px 12px;
+    }
