--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -281,4 +281,16 @@ margin-top:100px;
             width: 100%;
             margin: 32px 0 0;
         }
+
+            .section__main{
+            padding:41px 72px !important;
+            }
+            
+            .main__circle{
+            display:none;
+            }
+            
+            .main__preview {
+                margin: 30px -65px 20px -65px;
+            }
     }
