--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -294,7 +294,8 @@ margin-top:100px;
                 margin: 30px -65px 20px -65px;
             }
     }
-
+    @media only screen and (min-width: 767px){
     .section.main{
         padding:81px 72px !important;
     }
+}
