--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -299,3 +299,62 @@ margin-top:100px;
         padding:81px 72px !important;
     }
 }
+
+#pourquoi .discover__col{
+    width: calc(50% - 160px);
+    flex: 0 0 calc(50% - 160px);
+    
+    margin-left:80px;
+    margin-right:80px;
+    padding:0px 0px;
+    }
+    #pourquoi .discover__col .discover__list{
+    padding:64px 32px 150px 32px;
+    border-radius:15px;
+    background-repeat:no-repeat;
+    background-size:100% 100%;
+    }
+    
+    #pourquoi .discover__item{
+    background:white
+    }
+    
+    #pourquoi .discover__item:before{
+    display:none;
+    }
+    
+    #pourquoi .discover__col:last-child .discover__box{
+    color:white;
+    flex-direction:column;
+    }
+    #pourquoi .discover__col:last-child .discover__list{
+    padding:64px 32px 145px 32px;
+    }
+    #pourquoi .discover__col:last-child .discover__box ul{
+    list-style:disc;
+    }
+    
+    #pourquoi .discover__col:last-child .discover__box p{
+    margin-bottom:1em;
+    }
+    
+    #pourquoi .discover__col:last-child .discover__box img{
+    position:absolute;
+    bottom:30px;
+    left:20px;
+    }
+    
+    #pourquoi .discover__col:last-child .discover__box ul li{
+    margin-bottom: .75em;
+    line-height:1.5em;
+    }
+    
+    #pourquoi .discover__box{
+    padding:0px;
+    font-weight:500;
+    }
+
+    #pourquoi h4{
+        text-align:center;
+        margin-bottom:1em;
+    }
