--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -328,10 +328,11 @@ margin-top:100px;
     flex-direction:column;
     }
     #pourquoi .discover__col:last-child .discover__list{
-    padding:64px 32px 145px 32px;
+    padding:64px 32px 100px 32px;
     }
     #pourquoi .discover__col:last-child .discover__box ul{
     list-style:disc;
+    margin-left:1em;
     }
     
     #pourquoi .discover__col:last-child .discover__box p{
@@ -357,4 +358,38 @@ margin-top:100px;
     #pourquoi h4{
         text-align:center;
         margin-bottom:1em;
+    }
+
+    @media only screen and (max-width: 767px){
+        #pourquoi .discover__col {
+            width: 100%;
+            flex: 100%;
+            margin-left: 0px;
+            margin-right: 0px;
+            padding: 0;
+        }
+        
+        #pourquoi .discover__col .discover__list {
+            padding: 32px 32px 72px 32px;
+            border-radius: 15px;
+            background-repeat: no-repeat;
+            background-size: 100% 100%;
+        }
+        
+        #pourquoi .discover__col:last-child .discover__list {
+            padding: 32px 32px 64px 32px;
+        }
+        
+        #pourquoi .discover__col:last-child .discover__box p {
+            margin-bottom: .25em;
+        }
+        
+        #pourquoi .discover__col:last-child .discover__box ul li {
+            margin-bottom: 0.5em;
+            line-height: 1.1em;
+        }
+        
+        #pourquoi .discover__col:last-child .discover__box ul{
+        margin-top:.25em;
+        }
     }
