--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -415,3 +415,9 @@ margin-top:100px;
       #exemple{
         margin-bottom:100px;
       }
+
+      @media only screen and (max-width: 767px){
+        .main__wrap{
+          padding-top:100px;
+        }
+      }
